--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <!-- <link href="assets/css/style.css" rel="stylesheet"> -->
+  <link rel="stylesheet" type="assets/css" href="style.css" ">
 
   <!-- =======================================================
   * Template Name: Presento
