--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <!-- <link href="assets/css/style.css" rel="stylesheet"> -->
   
     <!-- Template Main CSS File - GITHUB DEPLOY HTML  -->
-  <link rel="stylesheet" type="assets/css" href="style.css"> 
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 
   <!-- =======================================================
   * Template Name: Presento
