First complete version

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-       <!--  <h1 class="logo me-auto"><a href="index.html">Precision mapping <span>.</span></a></h1>  -->
+        <!-- <h2 class="logo me-auto"><a href="index.html">Precision mapping <span>.</span></a></h2>   -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1.png" alt="" scale="200"></a> 
+       <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
+	   <a href="index.html" class="navbar-brand"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" style="width:120px;" ></a>    
 	  <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1.png" alt="" width="100" height="100"></a> -->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -62,16 +63,13 @@
           <li><a class="nav-link scrollto " href="#portfolio">Workpackages</a></li>
 
 		  <li><a href="publications.html"> Publications </a></li>
-		   <li class="dropdown"><a href="resources.html" target="_blank"><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
+		   <li class="dropdown"><a href="resources.html" ><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
             <ul> 
-				<li><a href="resources.html"> Codes & Softwares</a></li>
-                  <li><a href="resources.html"> Datasets </a></li>
-                  <li><a href="resources.html"> Lectures </a></li>
+				<li><a href="resources.html#codes"> Codes & Softwares</a></li>
+                  <li><a href="resources.html#datasets"> Datasets </a></li>
                 </ul>
               </li>
           <li><a  href="news.html"> News</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -529,40 +527,6 @@ physiology and help to identify subject-specific biomarkers for diagnostic strat
     </section><!-- End Portfolio Section -->
 
 	
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-        </div>
-
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-  
 	
   </main><!-- End #main -->
 
@@ -574,6 +538,9 @@ physiology and help to identify subject-specific biomarkers for diagnostic strat
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
+	     <a href="mailto:emeline.mullier@chuv.ch">Contact</a>
+		 <br>
+        <a href="https://data.snf.ch/grants/grant/209470" target="_blank">Supported by SNF Sinergia grant 209470</a>
         <div class="copyright">
           &copy; Copyright <strong><span> Lausanne University Hospital</span></strong>. All Rights Reserved
         </div>
