--- a/publications.html
+++ b/publications.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Presento Bootstrap Template</title>
+  <title> Sinergia Consortium - Precision Mapping</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Logo_sinergia_proposition1.png" rel="icon">
+  <link href="assets/img/Logo_sinergia_proposition1.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -44,7 +44,8 @@
     <div class="container d-flex align-items-center">
        <!--  <h1 class="logo me-auto"><a href="index.html">Precision mapping <span>.</span></a></h1>  -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1.png" alt="" scale="200"></a> 
+             <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
+	   <a href="index.html" class="navbar-brand"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" style="width:120px;" ></a>    
 	  <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1.png" alt="" width="100" height="100"></a> -->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -56,9 +57,8 @@
 		  <li><a href="publications.html"> Publications </a></li>
 		   <li class="dropdown"><a href="resources.html"><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
             <ul> 
-				<li><a href="resources.html"> Codes & Softwares</a></li>
-                  <li><a href="resources.html"> Datasets </a></li>
-                  <li><a href="resources.html"> Lectures </a></li>
+				<li><a href="resources.html#codes"> Codes & Softwares</a></li>
+                  <li><a href="resources.html#datasets"> Datasets </a></li>
                 </ul>
               </li>
           <li><a  href="news.html"> News</a></li>
@@ -72,26 +72,35 @@
 
   <main id="main">
 
+
+
     <!-- ======= Breadcrumbs ======= -->
     <section class="breadcrumbs">
       <div class="container">
 
-        <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Inner Page</li>
-        </ol>
-        <h2>Inner Page</h2>
 
+		<h2> <br> PUBLICATIONS </h2>
+  
       </div>
+	  
     </section><!-- End Breadcrumbs -->
+	
 
-    <section class="inner-page">
-      <div class="container" data-aos="fade-up">
-        <p>
-          Example inner page template
-        </p>
+	<p> </p>
+	
+
+
+        </div>
+
       </div>
-    </section>
+    </section><!-- End CODES Section -->
+
+
+
+
+
+
+
 
   </main><!-- End #main -->
 
@@ -103,6 +112,9 @@
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
+	     <a href="mailto:emeline.mullier@chuv.ch">Contact</a>
+		 <br>
+        <a href="https://data.snf.ch/grants/grant/209470" target="_blank">Supported by SNF Sinergia grant 209470</a>
         <div class="copyright">
           &copy; Copyright <strong><span> Lausanne University Hospital</span></strong>. All Rights Reserved
         </div>
