--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
   
@@ -29,8 +28,6 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
 
-  <!-- Template Main CSS File - ONLINE HTML  -->
-   <!-- <link href="assets/css/style.css" rel="stylesheet"> -->
   
     <!-- Template Main CSS File - GITHUB DEPLOY HTML  -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
@@ -52,6 +49,7 @@
         <!-- <h2 class="logo me-auto"><a href="index.html">Precision mapping <span>.</span></a></h2>   -->
       <!-- Uncomment below if you prefer to use an image logo -->
        <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
+       <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
 	   <a href="index.html" class="navbar-brand"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" style="width:120px;" ></a>    
 	  <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1.png" alt="" width="100" height="100"></a> -->
 
@@ -60,16 +58,19 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
 		   <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Workpackages</a></li>
+          <!-- <li><a class="nav-link scrollto " href="#portfolio">Workpackages</a></li>  -->
 
 		  <li><a href="publications.html"> Publications </a></li>
-		   <li class="dropdown"><a href="resources.html" ><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
+		   <li class="dropdown"><a href="index.html" ><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
             <ul> 
-				<li><a href="resources.html#codes"> Codes & Softwares</a></li>
-                  <li><a href="resources.html#datasets"> Datasets </a></li>
+				<!-- <li><a href="resources.html#codes"> Codes & Softwares</a></li> -->
+                <!--   <li><a href="resources.html#datasets"> Datasets </a></li> -->
+				<li><a href="https://sinergiaconsortium.bitbucket.io/" target="_blank"> Previous Sinergia Project</a></li>
+				<li><a href="https://sinergia-connectomics-summerschool-2021.github.io/" target="_blank"> Summer School 2021 </a></li>
+				<li><a href="resources.html" > Codes, Softwares & Datasets </a></li>
                 </ul>
               </li>
-          <li><a  href="news.html"> News</a></li>
+           <!-- <li><a  href="news.html"> News</a></li>  -->
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -102,6 +103,7 @@
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
+		    <div class="swiper-slide"><a href="https://www.snf.ch/en" target="_blank"><img src="assets/img/labos/Logo_FNS.png" class="img-fluid" scale="300%" alt=""></a></div>
             <div class="swiper-slide"><a href="https://www.lausanneuniversityhospital.com/home" target="_blank"><img src="assets/img/labos/Logo_CHUV_250x150.png" class="img-fluid" scale="300%" alt=""></a></div>
 			<div class="swiper-slide"><a href="https://www.unil.ch/central/en/home.html" target="_blank"><img src="assets/img/labos/Logo_UNIL.png" class="img-fluid" alt=""></a></div>
             <div class="swiper-slide"><a href="https://wp.unil.ch/connectomics/" target="_blank"><img src="assets/img/labos/Logo_ConnectomicsLab_250x150.png" class="img-fluid" alt=""></a></div>
@@ -162,19 +164,18 @@
 				</div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
                    <i class="bx bx-brain"></i> 
-				   <!-- <i class="bx bx-face"></i> -->
-				    <!-- <i class="bx bx-injection"></i> -->
                   <h4> Application to epilepsy</h4>
                   <p> The precision neuroimaging framework will be clinically applied to focal epilepsy. Pathological brain activity and network dynamics will be localized in intericral and ictal states. This will improve our understanding of the patho-
 physiology and help to identify subject-specific biomarkers for diagnostic stratification and treatment response. </p>
                 </div>
               </div>
-            </div><!-- End .content-->
+            </div>
           </div>
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section>
+	<!-- End About Section -->
 
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
@@ -182,53 +183,36 @@ physiology and help to identify subject-specific biomarkers for diagnostic strat
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-3">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Collaborators</p>
+              <i class="bi bi-building"></i>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+              <p> Institutions</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+          <div class="col-lg-5 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="bi bi-boxes"></i>
-              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Workpackages </p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="bx bx-brain"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1490" data-purecounter-duration="1" class="purecounter"></span>
-              <p> Acquisitions  </p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="bi bi-database"></i>
-              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Datasets</p>
+              <i class="bi bi-map"></i>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <p> Countries </p>
             </div>
           </div>
 
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section>
+	<!-- End Counts Section -->
 
 
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Team</h2>
         </div>
-
         <div class="row">
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -352,187 +336,13 @@ physiology and help to identify subject-specific biomarkers for diagnostic strat
           </div>
         </div>
       </div>
-    </section><!-- End Team Section -->
-	
-	
-	    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>WORKPACKAGES</h2>
-        </div>
-
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-eeg">EEG</li>
-              <li data-filter=".filter-mri">UHF-MRI</li>
-              <li data-filter=".filter-seeg">SEEG</li>
-			  <li data-filter=".filter-meth">METHODS</li>
-			   <li data-filter=".filter-ep">EPILEPSY</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-eeg filter-ep">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP1: hdEEG dataset of healthy subjects and epileptic patients</h4>
-                <p>EEG, EPILEPSY</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-mri filter-ep">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP2: UHF MRI dataset of healthy  subjects and epileptic patients</h4>
-                <p>UHF-MRI, EPILEPSY</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-seeg">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP3: Intra-cranial conduction recordings (SEEG)</h4>
-                <p>SEEG</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-method filter-mri">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP4: Curvature sensitive tractography & construction of white-mater microstructure atlas</h4>
-                <p>METHODS, UHF-MRI</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-meth filter-eeg">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP5:  Electric source imaging with novel priors: forward and inverse models</h4>
-                <p>METHODS, EEG</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-meth filter-eeg">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP6: Building the directed connectome and validation using hdEEG</h4>
-                <p>METHODS, EEG</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-meth">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP7: Graph signal processing for complex dynamics on directed graphs</h4>
-                <p>METHODS </p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-meth">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP8: Joint time-vertex connectome spectral analysis</h4>
-                <p>METHODS </p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-meth filter-ep">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP9: Network dynamics of interictal epileptic activity</h4>
-                <p>METHODS, EPILEPSY</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
-                </div>
-              </div>
-            </div>
-          </div>
-		  
-		<div class="col-lg-4 col-md-6 portfolio-item filter-meth filter-ep">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP10: Structure function coupling in epilepsy using graph signal processing</h4>
-                <p>METHODS, EPILEPSY</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-10jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-		  
-		  <div class="col-lg-4 col-md-6 portfolio-item filter-meth">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>WP11: Open dataset publication, data & code management infrastructure for reproductible science </h4>
-                <p>METHODS</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Portfolio Section -->
-
-	
+    </section>
+	<!-- End Team Section -->
 	
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
 
 
     <div class="container d-md-flex py-4">
@@ -552,15 +362,9 @@ physiology and help to identify subject-specific biomarkers for diagnostic strat
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
-	    <!-- 
-      <div class="social-links text-center text-md-end pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> 
-		 <a href="#" class="github"><i class="fab fa-github"></i></a>
-      </div>  -->
     </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
