--- a/resources.html
+++ b/resources.html
@@ -42,9 +42,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-       <!--  <h1 class="logo me-auto"><a href="index.html">Precision mapping <span>.</span></a></h1>  -->
+        <!-- <h2 class="logo me-auto"><a href="index.html">Precision mapping <span>.</span></a></h2>   -->
       <!-- Uncomment below if you prefer to use an image logo -->
-             <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
+       <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
+       <!--<a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" scale="200"></a>    -->
 	   <a href="index.html" class="navbar-brand"><img src="assets/img/Logo_sinergia_proposition1b.png" alt="" style="width:120px;" ></a>    
 	  <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/Logo_sinergia_proposition1.png" alt="" width="100" height="100"></a> -->
 
@@ -52,16 +53,21 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-		   <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Workpackages</a></li>
+		   <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
+          <!-- <li><a class="nav-link scrollto " href="#portfolio">Workpackages</a></li>  -->
+
 		  <li><a href="publications.html"> Publications </a></li>
-		   <li class="dropdown"><a href="resources.html"><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
+		   <li class="dropdown"><a href="index.html" ><span> Resources </span> <i class="bi bi-chevron-down"></i></a>
             <ul> 
-				<li><a href="resources.html#codes"> Codes & Softwares</a></li>
-                  <li><a href="resources.html#datasets"> Datasets </a></li>
+				<!-- <li><a href="resources.html#codes"> Codes & Softwares</a></li> -->
+                <!--   <li><a href="resources.html#datasets"> Datasets </a></li> -->
+				<li><a href="https://sinergiaconsortium.bitbucket.io/" target="_blank"> Previous Sinergia Project</a></li>
+				<li><a href="https://sinergia-connectomics-summerschool-2021.github.io/" target="_blank"> Summer School 2021 </a></li>
+				<li><a href="resources.html" > Codes, Softwares & Datasets </a></li>
                 </ul>
               </li>
-          <li><a  href="news.html"> News</a></li>
+           <!-- <li><a  href="news.html"> News</a></li>  -->
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
